Fix spacing on nieuws.html

--- a/assets/scss/_pages.scss
+++ b/assets/scss/_pages.scss
@@ -1,11 +1,18 @@
 .news-grid-item {
 	padding: $gutter;
+	figure {
+		margin-bottom: $gutter;
+	}
 	h3 {
 		font-size: 24px;
 		line-height: 32px;
 	}
 	p {
 		margin: 5px 0;
+	}
+	time {
+		font-size: 14px;
+		font-weight: 700;
 	}
 }
 .news-container {
